--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  font-family: Ubuntu, sans-serif;
 }
 
 .App-logo {
@@ -12,6 +13,7 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
+
 
 .App-header {
   background-color: #282c34;
@@ -35,4 +37,66 @@
   to {
     transform: rotate(360deg);
   }
+}
+.code
+{
+  font-family: 'Source Code Pro';
+  width: 91vw;
+  border: 2px solid black;
+  text-align: left;
+  padding: 12px;
+  line-height: 10px;
+  margin-left: 13px;
+}
+@media (max-width: 768px) {
+  .code
+      {
+        line-height: 24px;
+  }
+}
+/* Styles for the collapsible */
+.collapsible {
+  margin: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.collapsible-header {
+  padding: 3px;
+  cursor: pointer;
+  background-color: #f2f2f2;
+  margin: 0;
+}
+
+.collapsible-content {
+  display: none;
+  padding: 10px;
+}
+
+/* Styles to show the content when expanded */
+.collapsible.active .collapsible-content {
+  display: block;
+}
+.collapsible-header{
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+  height: 34px;
+  font-size: 19px;
+}
+.button{
+margin-top: 8px;
+box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+margin: 0 auto;
+
+width: 90%;
+  height: 243px;
+
+}
+.mainbutton{
+  margin: 0 auto;
+  margin-top: 100px;
+  margin-left: 10px;
+}
+.btnpre{
+  position: relative;
+  bottom: 234px;
 }
